--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
+       {
             "type": "node",
             "request": "launch",
-            "name": "Run Locally",
+            "name": "db-week2-Zehra",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/Exercises/Node.js/week2-blog-API/server.js"
+            "program": "${workspaceFolder}/Exercises/Databases/week2/recipes.js"
         }
     ]
 }
