--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
-Exercises/.DS_Store
+.DS_Store
 
-Exercises/Node.js/week2-blog-API/node_modules/
+node_modules/
 
-Exercises/Node.js/week2-blog-API/public/
+public/
 
 .vscode/
